--- a/frontend/aws-rekognition-photo-album/src/app/gallery/gallery/gallery.component.css
+++ b/frontend/aws-rekognition-photo-album/src/app/gallery/gallery/gallery.component.css
@@ -7,7 +7,11 @@ li {
     display: inline;
 }
 
-.tn {
+btn-info {
+    margin-left: 25px;
+}
+
+tn {
     margin: 6px;
     border: 4px solid #eee;
     box-shadow: #555 1px 1px 8px 1px;
