--- a/frontend/aws-rekognition-photo-album/src/app/image/image-detail.component.html
+++ b/frontend/aws-rekognition-photo-album/src/app/image/image-detail.component.html
@@ -1,1 +1,13 @@
-<h2>test</h2>
+<div class="row">
+    <div class="col-md-12">
+        <div [ngStyle]="{'background-image': 'url('+image.url+')'}"
+            class="img-container"></div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12 caption-row">
+        <span id='caption'>
+            {{image.caption}}
+        </span>
+    </div>
+</div>
