--- a/frontend/aws-rekognition-photo-album/src/styles.css
+++ b/frontend/aws-rekognition-photo-album/src/styles.css
@@ -9,3 +9,5 @@ body{
     padding-top: 60px;
     color: #333;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
