--- a/frontend/aws-rekognition-photo-album/src/app/gallery/gallery/gallery.component.css
+++ b/frontend/aws-rekognition-photo-album/src/app/gallery/gallery/gallery.component.css
@@ -1,18 +1,9 @@
-ul {
-    padding: 0;
-    width: 1200px;
-    margin: 20px auto;
-}
-li {
-    display: inline;
-}
-
-btn-info {
-    margin-left: 25px;
-}
-
-tn {
-    margin: 6px;
-    border: 4px solid #eee;
-    box-shadow: #555 1px 1px 8px 1px;
-}
+  .gallery__image {
+	display: inline;
+	width: auto;
+	padding: 15px;
+	transition: 0.3s;
+  }
+  .gallery__image:hover {
+	transform: scale(1.1);
+  }
