--- a/frontend/aws-rekognition-photo-album/src/app/gallery/gallery/gallery.component.css
+++ b/frontend/aws-rekognition-photo-album/src/app/gallery/gallery/gallery.component.css
@@ -1,9 +1,22 @@
   .gallery__image {
-	display: inline;
 	width: auto;
 	padding: 15px;
 	transition: 0.3s;
   }
   .gallery__image:hover {
 	transform: scale(1.1);
+  } 
+
+  figure {
+	display: inline-block;
+	padding: 4px;
+	margin: auto;
+  }
+  
+  figcaption {
+	background-color: rgba(125, 121, 121, 0.469);
+	color: white;
+	font-style: italic;
+	padding: 2px;
+	text-align: center;
   }
