--- a/frontend/aws-rekognition-photo-album/src/app/navbar/navbar.component.html
+++ b/frontend/aws-rekognition-photo-album/src/app/navbar/navbar.component.html
@@ -1,39 +1,44 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Aws Photo Album</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse"
-    data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-    aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="/gallery/all">All</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/gallery/cars">Cars</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/gallery/faces">Faces</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/gallery/mountains">Mountains</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/gallery/watches">Watches</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
-          role="button" data-toggle="dropdown" aria-haspopup="true"
-          aria-expanded="false">
-          Actions
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-    </ul>
-  </div>
-</nav>
+<div fxLayout="row" fxLayoutAlign="space-around center">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Aws Photo Album</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse"
+      data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="/gallery/all">All</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/gallery/cars">Cars</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/gallery/faces">Faces</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/gallery/mountains">Mountains</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/gallery/watches">Watches</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#"
+            id="navbarDropdownMenuLink"
+            role="button" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">
+            Actions
+          </a>
+          <div class="dropdown-menu active"
+            aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="/gallery/uploadImage">Upload
+              image</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</div>
