--- a/frontend/aws-rekognition-photo-album/src/app/app.component.html
+++ b/frontend/aws-rekognition-photo-album/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="container">
   <app-navbar></app-navbar>
-  <router-outlet></router-outlet>
+  <router-outlet>
+    <!-- <app-upload-image></app-upload-image> -->
+  </router-outlet>
 </div>
