--- a/frontend/aws-rekognition-photo-album/src/app/image/upload-image/upload-image.component.html
+++ b/frontend/aws-rekognition-photo-album/src/app/image/upload-image/upload-image.component.html
@@ -1,15 +1,11 @@
-<div class="input-group mb-3">
-    <div class="input-group-prepend">
-        <span class="input-group-text">Upload</span>
+<form [formGroup]="uploadForm" (ngSubmit)="upload()">
+    <div class="input-group mb-3">
+        <div class="input-group-prepend">
+            <button class="btn btn-secondary" type="submit">Upload File</button>
+        </div>
+        <div class="custom-file">
+            <input type="file" class="custom-file-input" id="file">
+            <label class="custom-file-label" for="file">Choose file</label>
+        </div>
     </div>
-    <div class="custom-file">
-        <input type="file" class="custom-file-input" id="inputGroupFile01">
-        <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
-    </div>
-</div>
-<div fxLayout="row" fxLayoutAlign="space-around center">
-    <form action="/action_page.php">
-        <input type="file" id="myFile" name="filename">
-        <input type="submit">
-    </form>
-</div>
+</form>
