--- a/frontend/aws-rekognition-photo-album/src/app/navbar/navbar.component.html
+++ b/frontend/aws-rekognition-photo-album/src/app/navbar/navbar.component.html
@@ -18,7 +18,7 @@
           <a class="nav-link" href="/gallery/faces">Faces</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/gallery/mountains">Mountains</a>
+          <a class="nav-link" href="/gallery/nature">Nature</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/gallery/watches">Watches</a>
