--- a/frontend/aws-rekognition-photo-album/src/app/navbar/navbar.component.html
+++ b/frontend/aws-rekognition-photo-album/src/app/navbar/navbar.component.html
@@ -9,19 +9,19 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="/gallery/all">All</a>
+          <a class="nav-link" href="/awsRekognitionPhotoAlbum/images/all">All</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/gallery/cars">Cars</a>
+          <a class="nav-link" href="/awsRekognitionPhotoAlbum/images/cars">Cars</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/gallery/faces">Faces</a>
+          <a class="nav-link" href="/awsRekognitionPhotoAlbum/images/faces">Faces</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/gallery/nature">Nature</a>
+          <a class="nav-link" href="/awsRekognitionPhotoAlbum/images/nature">Nature</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/gallery/watches">Watches</a>
+          <a class="nav-link" href="/awsRekognitionPhotoAlbum/images/watches">Watches</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#"
