--- a/frontend/aws-rekognition-photo-album/src/app/navbar/navbar.component.html
+++ b/frontend/aws-rekognition-photo-album/src/app/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <div fxLayout="row" fxLayoutAlign="space-around center">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Aws Photo Album</a>
+    <a class="navbar-brand" href="/awsRekognitionPhotoAlbum/images/all">Aws
+      Photo Album</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
       data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +33,8 @@
           </a>
           <div class="dropdown-menu active"
             aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="/gallery/uploadImage">Upload
+            <a class="dropdown-item"
+              href="/awsRekognitionPhotoAlbum/uploadImage">Upload
               image</a>
             <a class="dropdown-item" href="#">Another action</a>
             <a class="dropdown-item" href="#">Something else here</a>
