--- a/frontend/aws-rekognition-photo-album/src/app/image/upload-image/upload-image.component.html
+++ b/frontend/aws-rekognition-photo-album/src/app/image/upload-image/upload-image.component.html
@@ -1,10 +1,12 @@
-<form [formGroup]="uploadForm" (ngSubmit)="upload()">
+<form (ngSubmit)="upload()">
     <div class="input-group mb-3">
         <div class="input-group-prepend">
             <button class="btn btn-secondary" type="submit">Upload File</button>
         </div>
         <div class="custom-file">
-            <input type="file" class="custom-file-input" id="file">
+            <input type="file" class="custom-file-input"
+                (change)="onFileUpload($event)" id="file"
+                #selecetdFile>
             <label class="custom-file-label" for="file">Choose file</label>
         </div>
     </div>
