--- a/frontend/aws-rekognition-photo-album/src/app/image/upload-image/upload-image.component.html
+++ b/frontend/aws-rekognition-photo-album/src/app/image/upload-image/upload-image.component.html
@@ -1,13 +1,17 @@
-<form (ngSubmit)="upload()">
-    <div class="input-group mb-3">
-        <div class="input-group-prepend">
-            <button class="btn btn-secondary" type="submit">Upload File</button>
-        </div>
-        <div class="custom-file">
-            <input type="file" class="custom-file-input"
-                (change)="onFileUpload($event)" id="file"
-                #selecetdFile>
-            <label class="custom-file-label" for="file">Choose file</label>
-        </div>
+<form [formGroup]="myForm" (ngSubmit)="upload()">
+    <div class="form-group">
+        <label for="file">File</label>
+        <input
+            formControlName="file"
+            id="file"
+            type="file"
+            class="form-control"
+            (change)="onFileChange($event)">
+        <!-- <div *ngIf="f.file.touched && f.file.invalid" class="alert
+            alert-danger">
+            <div *ngIf="f.file.errors?.required">File is required.</div>
+        </div> -->
     </div>
+    <img [src]="imageSrc" *ngIf="imageSrc" style="height: 300px; width:500px">
+    <button class="btn btn-primary" type="submit">Submit</button>
 </form>
