--- a/frontend/aws-rekognition-photo-album/src/app/navbar/navbar.component.html
+++ b/frontend/aws-rekognition-photo-album/src/app/navbar/navbar.component.html
@@ -12,17 +12,24 @@
         <li class="nav-item active">
           <a class="nav-link" href="/awsRekognitionPhotoAlbum/images/all">All</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/awsRekognitionPhotoAlbum/images/car">Cars</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/awsRekognitionPhotoAlbum/images/face">Faces</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/awsRekognitionPhotoAlbum/images/nature">Nature</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/awsRekognitionPhotoAlbum/images/watch">Watches</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#"
+            id="navbarDropdownMenuLink"
+            role="button" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">
+            Load by label
+          </a>
+          <div class="dropdown-menu active"
+            aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item"
+              href="/awsRekognitionPhotoAlbum/images/car">Cars</a>
+            <a class="dropdown-item"
+              href="/awsRekognitionPhotoAlbum/images/face">Faces</a>
+            <a class="dropdown-item"
+              href="/awsRekognitionPhotoAlbum/images/nature">Nature</a>
+            <a class="dropdown-item"
+              href="/awsRekognitionPhotoAlbum/images/watch">Watches</a>
+          </div>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#"
@@ -36,8 +43,6 @@
             <a class="dropdown-item"
               href="/awsRekognitionPhotoAlbum/uploadImage">Upload
               image</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
       </ul>
