--- a/frontend/aws-rekognition-photo-album/src/app/navbar/navbar.component.html
+++ b/frontend/aws-rekognition-photo-album/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="/awsRekognitionPhotoAlbum/images/all">All</a>
         </li>
@@ -46,6 +46,20 @@
           </div>
         </li>
       </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/awsRekognitionPhotoAlbum/user/signUp">SignUp</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/awsRekognitionPhotoAlbum/user/signIn">SignIn</a>
+          </li>
+          <!-- <li class="nav-item active">
+            <a class="nav-link" href="/awsRekognitionPhotoAlbum/user/LogOut">LogOut</a>
+          </li> -->
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </ul>
+      </form>
     </div>
   </nav>
 </div>
