--- a/frontend/aws-rekognition-photo-album/src/app/navbar/navbar.component.html
+++ b/frontend/aws-rekognition-photo-album/src/app/navbar/navbar.component.html
@@ -49,15 +49,17 @@
       <form class="form-inline my-2 my-lg-0">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="/awsRekognitionPhotoAlbum/user/signUp">SignUp</a>
+            <a role="button" class="btn btn-outline-secondary"
+              href="/awsRekognitionPhotoAlbum/user/signup">SignUp</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/awsRekognitionPhotoAlbum/user/signIn">SignIn</a>
+            <a role="button" class="btn btn-outline-secondary"
+              href="/awsRekognitionPhotoAlbum/user/signin">SignIn</a>
           </li>
           <!-- <li class="nav-item active">
-            <a class="nav-link" href="/awsRekognitionPhotoAlbum/user/LogOut">LogOut</a>
+            <a role="button" class="btn btn-outline-secondary"
+              href="/awsRekognitionPhotoAlbum/user/LogOut">LogOut</a>
           </li> -->
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </ul>
       </form>
     </div>
