--- a/frontend/aws-rekognition-photo-album/src/app/navbar/navbar.component.html
+++ b/frontend/aws-rekognition-photo-album/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="/awsRekognitionPhotoAlbum/images/all">All</a>
         </li>
@@ -46,6 +46,14 @@
           </div>
         </li>
       </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a role="button" class="btn btn-outline-secondary"
+              href="/awsRekognitionPhotoAlbum/login">LogIn/Out</a>
+          </li>
+        </ul>
+      </form>
     </div>
   </nav>
 </div>
