fix upload button in upload-image component.

--- a/frontend/aws-rekognition-photo-album/src/app/image/upload-image/upload-image.component.html
+++ b/frontend/aws-rekognition-photo-album/src/app/image/upload-image/upload-image.component.html
@@ -8,5 +8,6 @@
             (change)="onFileChange($event)">
     </div>
     <img [src]="imageSrc" *ngIf="imageSrc" style="height: 300px; width:500px">
-    <button id="submitUploadButton" class="btn btn-primary" type="submit">Submit</button>
+    <button id="submitUploadButton" class="btn
+        btn-outline-secondary" type="submit">Upload</button>
 </form>
