--- a/frontend/aws-rekognition-photo-album/src/app/gallery/gallery/gallery.component.html
+++ b/frontend/aws-rekognition-photo-album/src/app/gallery/gallery/gallery.component.html
@@ -6,8 +6,8 @@
 <div fxLayout="row" fxLayoutAlign="space-around center">
     <figure *ngFor="let image of visibleImages">
         <a href="{{image.Image}}" target="_blank">
-            <img src="{{image.Image}}" width="300px" height="250px"
-                class="gallery__image" />
+            <img alt="alt text" src="{{image.Image}}" width="300px"
+                height="250px" class="gallery__image" />
         </a>
         <figcaption *ngFor="let label of image.Labels">{{label.Name}}</figcaption>
         <div *ngIf="userType == 'user' && image.User !== userEmail;else
